--- a/thankyou.html
+++ b/thankyou.html
@@ -255,12 +255,12 @@
 
     <div id="letter-container">
       <p id="letter-text">Click the button to leave a message</p>
-      <button onclick="window.open('https://bgashtaev.github.io/letters/', '_blank')">View Messages</button>
+      <button onclick="window.open('https://bgashtaev.github.io/letters/', '_blank')">Leave a Message</button>
     </div>
   </div>
 
   <div id="music-container">
-  <h2>Стишки и Песни 🎶</h2>
+  <h2>Some Audio</Audio> 🎶</h2>
   <div class="track">
     <p>🌸 Когда я жила в Кыргызстане мне папа звонил и всегда просил выучить стишок или песню до следующего звонка</p>
     <audio controls>
@@ -293,6 +293,14 @@
 
   <div class="track"> 
     <p>Честно, меня так умилял твой голос, так приятно слушать тебя</p> 
+  </div>
+
+    <div class="track">
+      <p>Ты ту книгу все таки дальше 35 страницы прочитала? </p>
+    <audio controls>
+      <source src="audio.mp3" type="audio/ogg">
+      <source src="audio.mp3" type="audio/mpeg">
+    </audio>
   </div>
 </div>
 
