--- a/thankyou.html
+++ b/thankyou.html
@@ -210,6 +210,50 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   accent-color: #ff4d88; /* окрашивает play и прогресс */
 }
+    
+/* VIDEO */
+#video-container {
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+  padding: 25px;
+  border-radius: 20px;
+  text-align: center;
+  margin: 30px auto;
+  max-width: 900px;
+  animation: fadeInUp 1s forwards;
+}
+#video-container h2 {
+  margin-bottom: 16px;
+  font-family: 'Caveat', cursive;
+  color: #ff4d88;
+  font-size: 2rem;
+}
+.video-wrapper {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 16 / 9;           /* современный способ сделать 16:9 */
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+  background: #000;
+}
+.video-wrapper video {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+}
+.video-actions {
+  margin-top: 12px;
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+}
+.video-actions a, .video-actions button {
+  text-decoration: none;
+}
   </style>
 </head>
 
