--- a/Summary.html
+++ b/Summary.html
@@ -11,7 +11,6 @@
       --bg: linear-gradient(to bottom, #ffe0e6, #d0f0ff);
       --envelope-light: #f5edd1;
       --envelope-tab: #ecdeb8;
-      --envelope-cover: #e6cfa7;
       --heart-color: #ff4d88;
       --text-color: #333;
       --accent: #ff6f91;
@@ -25,13 +24,17 @@
       flex-direction: column;
       align-items: center;
       padding: 30px 15px;
+      animation: fadeIn 0.7s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(12px); }
+      to   { opacity: 1; transform: translateY(0); }
     }
 
     .envelope-wrapper {
       width: 420px;
-      height: auto;
       position: relative;
-      background: transparent;
       margin-top: 80px;
       transition: margin-top 0.6s ease;
     }
@@ -48,21 +51,25 @@
       border-radius: 0 0 20px 20px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
       cursor: pointer;
-      transition: transform 0.5s ease;
+      transition: transform 0.35s ease;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+    }
+
+    .envelope:hover:not(.open) {
+      transform: translateY(-5px);
     }
 
     .envelope::before {
       content: "";
       position: absolute;
       top: 0;
-      z-index: 2;
+      z-index: 3;
       border-top: 170px solid var(--envelope-tab);
       border-right: 210px solid transparent;
       border-left: 210px solid transparent;
-      transition: transform 0.5s ease;
+      transition: transform 0.6s ease;
       transform-origin: top;
     }
 
@@ -74,17 +81,23 @@
     .heart {
       width: 70px;
       height: 70px;
-      background-color: var(--heart-color);
+      background: var(--heart-color);
       border-radius: 50%;
       font-size: 28px;
-      color: #fff;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      color: white;
       position: relative;
-      z-index: 3;
-      transition: opacity 0.4s;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      z-index: 4;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+      transition: opacity 0.4s ease;
+      animation: beat 1.6s infinite ease-in-out;
+    }
+
+    @keyframes beat {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.15); }
     }
 
     .envelope.open .heart {
@@ -94,104 +107,130 @@
 
     .letter {
       position: absolute;
-      top: 110%;
+      top: 65%;
       left: 50%;
-      transform: translateX(-50%) scale(0.8);
+      transform: translateX(-50%) scale(0.9);
       width: 100%;
       max-width: 420px;
       background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.15);
       opacity: 0;
-      padding: 25px 25px 30px;
+      padding: 28px;
       box-sizing: border-box;
-      color: var(--text-color);
       font-size: 16px;
       line-height: 1.7;
       transition: all 0.6s ease;
       z-index: 1;
-      overflow-y: auto;
-      max-height: 300px;
+      
+      /* ВАЖНО — НЕТ ПОЛЗУНКА! */
+      max-height: none;
+      overflow: visible;
     }
 
     .envelope.open .letter {
+      top: -20px;
       opacity: 1;
       transform: translateX(-50%) scale(1);
     }
 
+    .letter p:first-child {
+      font-family: "Caveat", cursive;
+      font-size: 26px;
+      margin-bottom: 10px;
+    }
+
+    .tap-hint {
+      margin-top: 15px;
+      font-size: 14px;
+      color: rgba(0,0,0,0.55);
+      text-align: center;
+    }
+
+    .tap-hint span {
+      font-family: "Caveat";
+      font-size: 20px;
+      color: var(--accent);
+    }
+
     .video-container {
       display: none;
-      margin-top: 50px;
-      max-width: 700px;
       width: 90%;
-      border-radius: 12px;
+      max-width: 700px;
+      margin-top: 45px;
+      border-radius: 14px;
       overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      animation: fadeIn 1s ease forwards;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
     }
 
     .video-visible {
       display: block !important;
+      animation: fadeUp 0.8s ease forwards;
     }
 
-    video {
-      width: 100%;
-      display: block;
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
     }
+
+    video { width: 100%; display: block; }
 
     .menu-button {
       display: none;
-      margin-top: 30px;
+      margin-top: 25px;
       padding: 12px 24px;
-      font-size: 16px;
       border: none;
       border-radius: 12px;
+      font-size: 16px;
       background: linear-gradient(145deg, var(--accent), #ff9671);
       color: white;
       cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-      transition: all 0.3s ease;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      opacity: 0;
+      transform: translateY(20px);
     }
 
-    .menu-button:hover {
-      transform: scale(1.05);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
+    .menu-button.shown {
+      display: inline-block;
+      animation: fadeUp 0.7s ease forwards;
     }
   </style>
 </head>
+
 <body>
 
   <div class="envelope-wrapper" id="envelopeWrapper">
     <div class="envelope" id="envelope">
       <div class="heart">💙</div>
+
       <div class="letter">
         <p><strong>Dear Madina,</strong></p>
         <p>Ты не представляешь, как сильно твоя любовь осветила мою жизнь.</p>
-        <p>Я хотел создать этот сайт, чтобы ты лишний раз улыбнулась и вспомнила, как всё у нас было отлично.</p>
+        <p>Я хотел создать этот сайт, чтобы ты лишний раз улыбнулась и вспомнила, как всё у нас было хорошо.</p>
         <p>Всё, что я тут сделал — это плод твоих вложений в нас за эти два года.</p>
-        <p>💌</p>
+        <p>💙</p>
       </div>
     </div>
+
+    <div class="tap-hint"><span>Tap</span> on the heart to open it.</div>
   </div>
 
   <div class="video-container" id="videoBox">
     <video controls>
-      <source src="together.MOV" type="video/mp4" />
-      Your browser does not support the video tag.
+      <source src="together.MOV" type="video/mp4">
     </video>
   </div>
 
-  <button class="menu-button" id="menuButton" onclick="window.location.href='thankyou.html'">← На главную</button>
+  <button class="menu-button" id="menuButton" onclick="window.location.href='thankyou.html'">
+    ← На главную
+  </button>
 
   <script>
     const envelopeWrapper = document.getElementById('envelopeWrapper');
     const envelope = document.getElementById('envelope');
     const videoBox = document.getElementById('videoBox');
     const menuButton = document.getElementById('menuButton');
+
     let openedOnce = false;
 
     envelopeWrapper.addEventListener('click', () => {
@@ -200,14 +239,17 @@
 
       if (!openedOnce && envelope.classList.contains('open')) {
         openedOnce = true;
+
         setTimeout(() => {
           videoBox.classList.add('video-visible');
-        }, 5000);
+        }, 4000);
+
         setTimeout(() => {
-          menuButton.style.display = 'block';
-        }, 18000);
+          menuButton.classList.add('shown');
+        }, 11000);
       }
     });
   </script>
+
 </body>
 </html>
